# cnch_assestment

./: .gitignore  Dockerfile  README.md  alembic.ini  app.yaml  docker-compose.yml  manage.py  pyproject.toml  settings.py
docker/: docker_env.local  entrypoint.sh
project/: app.py  deps.py  exceptions.py  schema.py
project/api/: schema.py  urls.py  v1.py
project/api/v1/: data_audio.py
project/crud/: audo_file.py  base.py  user.py
project/models/: __init__.py  audio_file.py  database.py  user.py
project/models/alembic/: env.py
project/models/alembic/versions/: 04d9d99a9352_adding_audio_table.py  555e96b82802_adding_users_table.py  812a6757c8f7_generating_tables.py  8e0f73cf2545_adding_audio_table.py  ba78a783fd01_generating_tables.py
test/: conftest.py  test_user.py
