[tool.poetry]
name = "cnch_assesment"
version = "0.1.0"
description = ""
authors = ["Ider Delzo <soloidx@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.89.1"}
uvicorn = {extras = ["standard"], version = "^0.20.0"}
typer = "^0.7.0"
SQLAlchemy = "^1.4.46"
alembic = "^1.9.2"
psycopg2-binary = "^2.9.5"
pg8000 = "^1.29.4"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
sqlalchemy-stubs = "^0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
